--- a/app/src/main/res/layout/lv_item.xml
+++ b/app/src/main/res/layout/lv_item.xml
@@ -14,30 +14,29 @@
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#fff"
-            android:textSize="25sp"
+            android:layout_marginTop="5dp"
             android:gravity="center_vertical"
             android:paddingLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:text="Name" />
+            android:text="Name"
+            android:textColor="#fff"
+            android:textSize="25sp" />
 
         <TextView
             android:id="@+id/number"
-            android:text="ds"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#fff"
-            android:textSize="25sp"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp" />
+            android:layout_marginTop="2dp"
+            android:text="ds"
+            android:textColor="#fff"
+            android:textSize="25sp" />
 
     </LinearLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-/>
+        android:layout_marginTop="2dp"
+        android:layout_marginRight="10dp" />
 </LinearLayout>
